--- a/web/app/private.py.example
+++ b/web/app/private.py.example
@@ -3,7 +3,15 @@
     private.py
 '''
 
-private = {
-	'earth-engine-api': 'http://earthengine.googleapis.com/api/',
-	'earth-engine=auth': 'YOUR_AUTH_KEY_HERE',
+config = {
+	
+	'earth-engine': {
+		'api': 'http://earthengine.googleapis.com/api/',
+		'auth': 'YOUR_AUTH_KEY_HERE',
+	},
+	
+	'tipfy.sessions': {
+		'secret_key': 'YOUR_SECRET_KEY_HERE',
+	},
+	
 }
