Serve *.html from static files

--- a/web/app/app.yaml
+++ b/web/app/app.yaml
@@ -9,7 +9,7 @@ builtins:
 - remote_api: on
 
 handlers:
-- url: /(robots\.txt|favicon\.ico|claslite\.html|css/.*|images/.*|js/.*)
+- url: /(robots\.txt|favicon\.ico|.*\.html|css/.*|images/.*|js/.*)
   static_files: static/\1
   upload: static/(.*)
 
