--- a/web/app/app.yaml
+++ b/web/app/app.yaml
@@ -5,11 +5,32 @@ api_version: 1
 
 builtins:
 - appstats: on
+- deferred: on
 - datastore_admin: on
 - remote_api: on
 
+inbound_services:
+- warmup
+
+error_handlers:
+- file: templates/error_handlers/default_error.html
+
+- error_code: over_quota
+  file: templates/error_handlers/over_quota.html
+
+- error_code: dos_api_denial
+  file: templates/error_handlers/dos_api_denial.html
+
+- error_code: timeout
+  file: templates/error_handlers/timeout.html
+
 handlers:
-- url: /(robots\.txt|favicon\.ico|.*\.html|css/.*|images/.*|js/.*)
+- url: /favicon\.ico
+  static_files: static/favicon.ico
+  upload: static/favicon.ico
+  mime_type: image/vnd.microsoft.icon
+
+- url: /(robots\.txt|.*\.html|css/.*|images/.*|js/.*)
   static_files: static/\1
   upload: static/(.*)
 
