--- a/web/app/private.py.example
+++ b/web/app/private.py.example
@@ -14,4 +14,9 @@ config = {
 		'secret_key': 'YOUR_SECRET_KEY_HERE',
 	},
 	
+	'whitelist': {
+		'enabled': True,
+		'form': 'YOUR_USER_REQUEST_FORM',
+		'sheet': 'YOUR_SPREADSHEET_KEY/AND_SHEET_NUMBER',
+	},
 }
